# Feature-Based-Recommendation-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
Scripts/: blur_faces.py  detector.py  facial_landmarks.py  utils.py
src/: detector.py  utils.py
